# stlt-baby-bet

./: .gitignore  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
data/: odds.csv  odds.tsv
models/: formModel.py
src/stlt_baby_bet/: __init__.py
